# gatos

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  notes.txt
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  run.rs
web_src/: index.html  index.js
