[package]
name = "gatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
bevy-inspector-egui-rapier = "0.7.0"
bevy-web-resizer = "4.0.1"
bevy_rapier2d = "0.19.0"
egui_dock = "0.2.1"
bevy_asset_loader = "0.13.0"
iyes_loopless = "0.9.0"


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
exclude = [ "server" ]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true

