[package]
name = "gatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.9"
bevy-inspector-egui = "0.14"
bevy-inspector-egui-rapier = "0.8"
bevy-web-resizer = "4.0"
bevy_rapier2d = "0.19"
egui_dock = "0.3"
bevy_asset_loader = {version = "0.14", path="../bevy_asset_loader/bevy_asset_loader", features = ["stageless"]}
iyes_loopless = "0.9"
image = "0.24"


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
exclude = [ "server" ]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true

